fixed sidebar min/max width on smaller displays

--- a/map.css
+++ b/map.css
@@ -16,6 +16,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: Overpass, sans-serif;
+    min-width: 350px;
 }
 
 a {
@@ -191,8 +192,6 @@ a:hover, a:active {
 
 .layer:has(.layerInfo > input:not(:checked)) .icons,
 .icons.hide-icons {
-    /* display: none; */
-    /* max-height: 0px; */
     height: 0px;
 }
 
@@ -245,7 +244,6 @@ a:hover, a:active {
         flex-direction: column;
         justify-content: center;
         gap: 5px;
-        /* position: absolute; */
         top: 10px;
         left: 10px;
         z-index: 1001;
@@ -278,20 +276,19 @@ a:hover, a:active {
     }
 
     .sidebar {
-        width: auto;
+        width: 100%;
         inset: 0;
         background-color: var(--primary-bg-color);
         z-index: 1000;
-        /* transform: translateX(-100%); */
-        /* transition: transform 0.3s ease; */
         height: 0%;
         transition: 0.3s;
         order: 2;
         position: relative;
+        max-width: unset;
+        min-width: unset;
     }
 
     .sidebar.open {
-        /* transform: translateX(0); */
         height: 70%;
         box-shadow: 0 -2px 3px 2px #00000036;
     }
@@ -308,7 +305,6 @@ a:hover, a:active {
         padding: 10px;
         background-color: var(--header-bg-color);
         color: var(--accent-color);
-        /* order: 1; */
     }
 
     .mobile_header h1 {
